--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-   Name: Khalid El Khuri
+   Name: M. Ahsan Khan
    Studentnummer: 11927739
    Program: HTML page to display svg
     -->
