--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <html>
 <meta charset="utf-8">
 
-
 <head>
 
 	<link href="css/style.css" rel="stylesheet" type="text/css">
@@ -20,7 +19,7 @@
 	<script src="js/d3line.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     
-    <title>Europe Data Project</title>
+    <title>Europe Data</title>
 
 </head>
 
