--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	<script src="js/d3line.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     
-    <title>Europe Data from Ahsan Khans</title>
+
+    <title>Europe Data</title>
 
 </head>
 
